# spredly-dev

./: docker-compose.yml  pyproject.toml
migrations/versions/: ac0a056d5ac1_match_result_refactoring.py
src/core/: logger.py  models.py  utils.py
src/events/: connection.py  handler.py  queues.py  receiver.py  schemas.py  sender.py
src/parser/client/: base.py
src/repositories/: match_repository.py
src/services/: results_service.py
src/worker/: tasks.py
